--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-home>Loading....</app-home>
+  <app-naving>Loading....</app-naving>
 </body>
 </html>
